@@ -33,9 +33,9 @@ setup(
             "cachetools",
             "python-memcached",
             'pika',
-            'geotooldbapi>=1.4',
+            'geotooldbapi>=1.5',
             'geotoolapi>=1.22',
-            'meitrackparser>=1.13',
+            'meitrackparser>=1.14',
             'celery',
             'kombu',
             # 'geotool_api==1.0',
